# xgmml

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh.md  mkdocs.yml  pyproject.toml  requirements.txt  zensical.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
data/tests/: yeast_perturbation.xgmml
docs/: api.en.md  api.zh.md  custom.en.md  custom.zh.md  examples.en.md  examples.zh.md  index.en.md  index.zh.md  parameters.en.md  parameters.zh.md  style.en.md  style.zh.md
docs/css/: table.css
docs/en/: api.md  custom.md  examples.md  index.md  parameters.md  style.md
docs/zh/: api.md  custom.md  examples.md  index.md  parameters.md  style.md
tests/reader/: test_igraph_xgmml_reader.py  test_networkx_xgmml_reader.py
tests/style/: test_style_mapper.py
tests/writer/: test_igraph_xgmml_writer.py  test_networkx_xgmml_writer.py
xgmml/layout/: base_layout.py  fruchterman_reingold_layout.py  kamada_kawai_layout.py
xgmml/reader/: igraph_xgmml_reader.py  networkx_xgmml_reader.py  xgmml_reader.py
xgmml/style/: style_mapper.py
xgmml/utils/: path_utils.py  style_utils.py  xml_utils.py
xgmml/writer/: igraph_xgmml_writer.py  networkx_xgmml_writer.py  xgmml_writer.py
